Changed Guest to Away

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <button id="reset-button">Reset</button>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <h4 id="guest-score" class="score">0</h4>  
                 <div class="score-buttons--container">
                     <button id="guest-add-1" 
